add kas.fyi shutdown

--- a/docs/timeline/2025.md
+++ b/docs/timeline/2025.md
@@ -257,3 +257,46 @@ Kaspa 也在几十分钟内，从 0.07 下跌到 0.009，后来又反弹到 0.05
 
 
 
+## 2025-12-14 区块浏览器 kas.fyi 关闭
+
+因为运营费用不菲，以及对社区一件 KRC20 事件的不満（kas.fyi 拒绝添加一个明显炒作诈骗的 meme 币的信息，引起一些人的对 kas.fyi 的攻击，认为一个数据平台不应该做审查）。kas.fyi 的作者 CryptoK 决定将 [https://kas.fyi](https://kas.fyi) 下线，并注销了自己的推特账号 ([https://x.com/cryptok777](https://x.com/cryptok777)) 和 kas.fyi 的官方推特账号。
+
+::: info Yonatan 对此事的回应
+
+Regarding kas.fyi: unfortunately the owner was somewhat burnt by previous community interactions around a certain krc20 issue, and is no longer interested in receiving support, instead insists on selling (price is legit, it's his efforts, but we can fund a dev for a full year with same budget).
+
+Our plan B is to fund Alex (KIP16 author) to help fill the gap kas.fyi created - whether he does so via a new platform or through existing ones, we discussed, but I’ll leave to him to communicate. There is clear value in redundant explorer infra, and afaik both existing ones use the kaspa.org api.
+
+I want to reiterate: if you have created infra for Kaspa that is already used and loved, and serves as a public good, we* will find sources to fund you. Please message me before you are burnt out and want to exit and sell - rather when you are still committed to the project and just need some kas support and a nudge of deserved recognition for your efforts. But again pls refer to the beginning of this paragraph and comprehend the context of this.
+
+I want to thank kas.fyi for his enduring contribution. I’m sorry that my offer to support came too late, when you were already looking to exit. I hope you reconsider.
+
+中文翻译：
+
+关于 kas.fyi 平台：遗憾的是，该平台所有者曾在某起 KRC20 相关事件的社区互动中受挫，如今已无意再接受社区支持，执意要将平台出售。（平心而论，这个报价契合他为平台付出的心血，但我们用同等预算本可以资助一名开发者全职工作一整年。）
+
+我们的备选方案是，资助 KIP16 协议的作者 Alex 来填补 kas.fyi 停运后留下的空白。我们已就此讨论过相关方案 —— 无论是由他开发一个全新平台，还是基于现有平台进行功能拓展，具体细节将由他本人向社区公布。区块链浏览器这类基础设施的冗余性建设具有重要价值，而且据我所知，目前社区现有的两款浏览器均基于 kaspa.org 的官方接口运行。
+
+在此我想重申：如果你为 Kaspa 生态开发的基础设施已投入使用并获得社区认可，且具备公共产品属性，我们定会为你协调资金支持。请务必在你心力交瘁、萌生退意并打算出售项目之前联系我 —— 最好是在你仍对项目满怀热忱、只是需要一些 Kaspa 代币支持，以及希望自己的付出得到应有的认可之时。但再次提醒，请务必结合本段开头的前提条件，理解这一资助承诺的适用场景。
+
+最后，我要感谢 kas.fyi 长期以来为社区做出的贡献。很抱歉，我提出的支持提议来得太迟，彼时你已决心退场。但愿你能重新考虑。
+
+- 来源：[https://discord.com/channels/599153230659846165/916662870379491328/1449862229158531193](https://discord.com/channels/599153230659846165/916662870379491328/1449862229158531193)
+
+:::
+
+如今，[https://kas.fyi](https://kas.fyi) 域名重定向到了另一个区块链浏览器：[https://kaspa.stream/](https://kaspa.stream/)
+
+kas.fyi 是最早的也是最受欢迎的 Kaspa 区块浏览器，在 Kaspa 社区极具影响力。kas.fyi 的关闭是一件非常遗憾的事件。
+
+<img :src="$withBase('/kas/kas.fyi.shutdown.png')" />
+
+
+其他信息：
+
+- [https://x.com/Kaspa_HypeMan/status/2000308476481060896](https://x.com/Kaspa_HypeMan/status/2000308476481060896)
+
+- [https://x.com/kaspador_/status/1999125595897086146](https://x.com/kaspador_/status/1999125595897086146)
+
+- [https://x.com/supertypo_kas/status/2000139154819109346](https://x.com/supertypo_kas/status/2000139154819109346)
+
